    * 1096 New WATO web service: manage hosts via a new HTTP API...
    * 1155 NagVis map edit/view permissions can now be set using roles/groups...
    * 1115 Renamed rule: Hosts using SNMP v2c -> Legacy SNMP devices using SNMP v2c...
    * 1404 Make title/help of custom user attributes localizable...
    * 1159 Remote BI Aggregations can now be configured to be checked as single services...
    * 1064 FIX: Fixed rare issue with WATO communication in distributed setups (different OS versions)...
    * 1089 FIX: Snapshot restore: fixed exception during exception handling......
    * 1091 FIX: logwatch patterns: allow unicode text in pattern comment
    * 1092 FIX: logwatch: now able to enter unicode text into the "Pattern (Regex)" field
    * 0191 FIX: Added swp files to the ignore list for the WATO git feature...
    * 1153 FIX: Changed custom user attributes can now be used immediately...
    * 0201 FIX: Fixed error message in Rulelist of RBN...
    * 1100 FIX: WATO backup domains: fixed bug were excluded files still got deleted on snapshot restore...
    * 1101 FIX: WATO check parameter: renamed 'Nominal Voltages' to 'Voltage Levels..'
    * 1396 FIX: Fix default setting of Enable sounds in views...
    * 1109 FIX: WATO active checks: passwords no longer shown as plain text....
    * 1119 FIX: WATO create rule: No longer raises an incorrect permission warning when creating a new rule...
    * 1121 FIX: Rule based notifications formular: No longer raises Request-Uri-Too-Large errors...
    * 1160 FIX: Fixed wrong named column in mkeventd rules

    Notifications:
    * 1151 Add variables (HOST/SERVICE)ACK(AUTHOR/COMMENT) to notification context...
    * 1394 HTML notifications have a new content field for debugging variables...
    * 1400 Added example notification script for Pushover to doc/treasures/notifications...
    * 1123 Rule based notifications: New condition "Match Service Groups"
    * 1186 RBN: It's now possible to Filter for contactgroups...