@@ -154,6 +154,7 @@
     * 1115 Renamed rule: Hosts using SNMP v2c -> Legacy SNMP devices using SNMP v2c...
     * 1404 Make title/help of custom user attributes localizable...
     * 1159 Remote BI Aggregations can now be configured to be checked as single services...
+    * 1163 Service discovery: Added direct link to check parameter ruleset of services...
     * 1064 FIX: Fixed rare issue with WATO communication in distributed setups (different OS versions)...
     * 1089 FIX: Snapshot restore: fixed exception during exception handling......
     * 1091 FIX: logwatch patterns: allow unicode text in pattern comment
